# universe-sim

./: .gitignore  AGENTS.md  CLAUDE.md  DIRECTOR_PLAN.md  FUTURE.md  FUTURE_ML.md  M72_TASK_BRIEF.md  M75_T2_ORGANISM_MOVEMENT.md  M75_T3_ENERGY_PRESSURE.md  VISION_REALIGNMENT.md  connections.html  index.html  manual.md  package-lock.json  package.json  playtest-m73.cjs  report.md  structure-public.md  structure.md  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
api/: admin.ts  init-db.ts  load.ts  save.ts  science.ts  slack-notify.ts  world-settings.ts
docs/: GAME_DESIGN.md  MASTER_DEV_PLAN.md  element-properties.md
error/: Review.txt  error.txt
playtest-m72/: crop.cjs  run.cjs  run2.cjs  run3.cjs  run4.cjs
playtest-screenshots/: console-logs.txt
rust/: Cargo.toml
rust/physics/: Cargo.toml
rust/physics/src/: constants.rs  cosmology.rs  lib.rs  planetary.rs  rng.rs  stellar.rs  types.rs
rust/terrain/: Cargo.toml
rust/terrain/src/: erosion.rs  lib.rs  minerals.rs  rivers.rs  rng.rs  tectonics.rs  types.rs
scripts/: find-rivers.mjs  find-rivers2.mjs  generate-car.mjs  visual-playtest-v2.mjs  visual-playtest-v3.mjs  visual-playtest.mjs
server/: capture_debug.mjs  capture_equator.mjs  capture_final.mjs  capture_fly.mjs  capture_fly2.mjs  capture_fly3.mjs  capture_game.mjs  capture_game2.mjs  capture_game3.mjs  capture_game4.mjs  capture_game5.mjs  capture_game6.mjs  capture_navigate.mjs  capture_speed.mjs  capture_teleport.mjs  compute_nodes.mjs  compute_spawn.mjs  notify_m13.mjs  (+13 more)
(+535 files in other folders)
