[package]
name = "universe-terrain"
version = "0.1.0"
edition = "2021"
description = "Tectonic, erosion and mineral terrain generation driven by planetary physics"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen      = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
js-sys            = { workspace = true }
console_error_panic_hook = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto       = true
